# Person_Detection_And_Tracking

./: README.md  mkdocs.yml
.github/workflows/: ci.yml
docker/: Dockerfile  ros_entrypoint.sh
docker/firos_tracking/: robots.json  whitelist.json
docs/: README.md  architecture.md  installationguide.md  usermanual.md
files/: NewObstacles.msg  central-sp-with-worker.patch
files/firos_config_tracking/: config.json  config.json.template  robotdescriptions.json
files/scripts/: ros_entrypoint.sh  run_clean.sh  run_install.sh  run_intrinsic_calibration_1.sh  run_intrinsic_calibration_2.sh  run_mono_recorder.sh  run_stereo_calibration.sh  run_stereo_recorder.sh  run_tracking.sh
src/camera_tracker/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/camera_tracker/config/: config.yaml  rosconsole.config
src/camera_tracker/data/: config_data_cam1_cam2.xml
src/camera_tracker/launch/: tracking_node.launch  tracking_nodelet.launch  tracking_nodelet_gdb.launch
src/camera_tracker/msg/: Rect.msg  RectArray.msg  YOLO_Detections.msg
src/camera_tracker/src/: Detection.cpp  Hungarian.cpp  TrackerClass.cpp  Tracking.cpp  camera_tracker.cpp  camera_tracker_node.cpp  camera_tracker_nodelet.cpp
src/mapupdates_msgs/: CMakeLists.txt  package.xml
src/mapupdates_msgs/msg/: NewObstacles.msg
src/stereo_camera_calibration/: CMakeLists.txt  nodelet_plugins.xml  package.xml
src/stereo_camera_calibration/config/: config.yaml  rosconsole.config
src/tracking/: CMakeLists.txt  package.xml
src/tracking/config/: config.yaml
src/ueye_cam-1.0.17/: CMakeLists.txt
(+39 files in other folders)
