<package>
  <name>mapupdates_msgs</name>
  <version>1.0.0</version>
  <description>
    mapupdates, new obstacles
  </description>
  <maintainer email="todo@todo.todo">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>